<resources>
    <string name="app_name">MakeTroll</string>
    <string name="add_frame">Add Frame</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_frame">Remove frame</string>
    <string name="cropped_image">Cropped Image</string>
    <string name="crop">Crop</string>
    <string name="select_image">Select Image</string>
    <string name="view_drag_helper">View Drag helper</string>
    <string name="done">Done</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="add_label">Add Label</string>
    <string name="switch_activity">Switch Activity</string>
    <string name="message">Message</string>
    <string name="edit">Edit</string>
</resources>
