<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AIF_child_photo_frame"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/cell_rectangle"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/AIF_action_add_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_a_photo_black_24dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/AIF_action_remove_frame"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:adjustViewBounds="true"
        android:contentDescription="@string/remove_frame"
        android:cropToPadding="true"
        android:src="@drawable/ic_cancel_black_24dp" />

    <RelativeLayout
        android:id="@+id/AIF_mask_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMask"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/AIF_drag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/view_drag_helper"
            android:src="@drawable/ic_drag" />

        <ImageButton
            android:id="@+id/AIF_action_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/view_drag_helper"
            android:src="@drawable/ic_scale" />

    </RelativeLayout>
</FrameLayout>